eventhandler for scroll introvideo out of view + modal ax height IOS compatibility issue

--- a/css/style.css
+++ b/css/style.css
@@ -145,7 +145,7 @@ html {
 .modal-content img {
     max-width: 100%; 
     height: auto;
-    max-height: 96vh;
+  
 }
 
 .right {
